--- a/styles/main.css
+++ b/styles/main.css
@@ -7,79 +7,34 @@
 /* purgecss start ignore */
 html,
 body {
-  @apply bg-background;
 }
 
 .theme-light {
-  --color-primary: theme("colors.blue.700");
-  --color-primary-hover: theme("colors.blue.800");
-
-  --color-secondary: theme("colors.gray.600");
-  --color-secondary-hover: theme("colors.gray.700");
-
-  --color-muted: theme("colors.gray.300");
-  --color-muted-hover: theme("colors.gray.500");
-
-  --color-success: theme("colors.green.500");
-  --color-success-hover: theme("colors.green.700");
-  --color-success-background: theme("colors.green.100");
-
-  --color-info: theme("colors.blue.300");
-  --color-info-hover: theme("colors.blue.500");
-  --color-info-background: theme("colors.blue.100");
-
-  --color-warning: theme("colors.yellow.300");
-  --color-warning-hover: theme("colors.yellow.500");
-  --color-warning-background: theme("colors.yellow.100");
-
-  --color-danger: theme("colors.red.500");
-  --color-danger-hover: theme("colors.red.700");
-  --color-danger-background: theme("colors.red.100");
-
-  --color-body: theme("colors.gray.700");
-  --color-body-muted: theme("colors.gray.500");
-
-  --color-heading: theme("colors.gray.900");
-  --color-heading-muted: theme("colors.gray.600");
-
-  --color-background: theme("colors.gray.100");
-  --color-background-muted: theme("colors.gray.200");
+  --color-background: #fafafa;
+  --color-primaryText: rgba(0, 0, 0, 0.87);
+  --color-secondaryText: rgba(0, 0, 0, 0.54);
+  --color-disabled: rgba(0, 0, 0, 0.38);
+  --color-hint: rgba(0, 0, 0, 0.38);
+  --color-divider: rgba(0, 0, 0, 0.12);
+  --color-yellow: #f2bf5e;
+  --color-blue: #7ec9ed;
+  --color-bioret: #c1b4fb;
+  --color-red: #ff6161;
+  --color-green: #bada55;
 }
 
 .theme-dark {
-  --color-primary: theme("colors.blue.300");
-  --color-primary-hover: theme("colors.blue.200");
-
-  --color-secondary: theme("colors.gray.400");
-  --color-secondary-hover: theme("colors.gray.300");
-
-  --color-muted: theme("colors.gray.700");
-  --color-muted-hover: theme("colors.gray.500");
-
-  --color-success: theme("colors.green.700");
-  --color-success-hover: theme("colors.green.500");
-  --color-success-background: theme("colors.green.900");
-
-  --color-info: theme("colors.blue.700");
-  --color-info-hover: theme("colors.blue.500");
-  --color-info-background: theme("colors.blue.900");
-
-  --color-warning: theme("colors.yellow.700");
-  --color-warning-hover: theme("colors.yellow.500");
-  --color-warning-background: theme("colors.yellow.900");
-
-  --color-danger: theme("colors.red.700");
-  --color-danger-hover: theme("colors.red.500");
-  --color-danger-background: theme("colors.red.900");
-
-  --color-body: theme("colors.gray.300");
-  --color-body-muted: theme("colors.gray.500");
-
-  --color-heading: theme("colors.gray.200");
-  --color-heading-muted: theme("colors.gray.400");
-
-  --color-background: theme("colors.gray.900");
-  --color-background-muted: theme("colors.gray.800");
+  --color-background: #303030;
+  --color-primaryText: #fff;
+  --color-secondaryText: rgba(255, 255, 255, 0.7);
+  --color-disabled: rgba(255, 255, 255, 0.5);
+  --color-hint: rgba(255, 255, 255, 0.5);
+  --color-divider: rgba(255, 255, 255, 0.12);
+  --color-yellow: #f2bf5e;
+  --color-blue: #7ec9ed;
+  --color-bioret: #c1b4fb;
+  --color-red: #ff6161;
+  --color-green: #bada55;
 }
 
 .content-transition {
